samples/_failures_safe/1761798683_3a7c12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80065ead.c: In function ‘print_token’:
./samples/SAFE/__tmp_80065ead.c:168:16: error: missing terminating " character
  168 |         printf("Line %d, Column
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_80065ead.c:168:9: error: expected expression at end of input
  168 |         printf("Line %d, Column
      |         ^~~~~~
./samples/SAFE/__tmp_80065ead.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80065ead.c:168:9: error: expected declaration or statement at end of input
